Added check for authorization
Added check for authorization in the methods that needed it. Added the check to the service methods and a catch that handles this error in the controllers. That way I prevent the user seeing another user's information.